syntax = "proto3";
package tendermint.fundraising.fundraising;

// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/tendermint/fundraising/x/fundraising/types";

// GenesisState defines the fundraising module's genesis state.
message GenesisState {
  // this line is used by starport scaffolding # genesis/proto/state
}
